--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"@nextui-org/system": "2.2.6",
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/visually-hidden": "3.8.12",
+		"axios": "^1.7.7",
 		"clsx": "^2.1.1",
+		"cookies-next": "^4.3.0",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
